[package]
name = "syntaxdot-rest"
version = "0.1.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
edition = "2018"

[dependencies]
alpino-tokenizer = { git = "https://github.com/danieldk/alpino-tokenizer" }
async-std = { version = "1.6.0", features = ["attributes"] }
async-trait = "0.1.40"
anyhow = "1"
clap = "2"
conllu = "0.5"
futures = "0.3"
indexmap = { version = "1", features = ["serde-1"] }
serde = "1"
serde_yaml = "0.8"
syntaxdot = { git = "ssh://git@github.com/tensordot/syntaxdot.git", branch = "main", default-features = false }
tch = "0.2"
tide = "0.13.0"
toml = "0.5"
unicode-normalization = "0.1"
