[package]
name = "syntaxdot-rest"
version = "0.1.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
edition = "2018"

[dependencies]
alpino-tokenizer = "0.3"
async-std = { version = "1.6.0", features = ["attributes"] }
async-trait = "0.1.40"
anyhow = "1"
clap = "2"
conllu = "0.6"
env_logger = "0.8"
futures = "0.3"
indexmap = { version = "1", features = ["serde-1"] }
log = "0.4"
serde = "1"
serde_yaml = "0.8"
syntaxdot = "0.3"
syntaxdot-encoders = "0.3"
syntaxdot-tch-ext = "0.3"
syntaxdot-tokenizers = "0.3"
tch = "0.4"
tide = "0.13.0"
toml = "0.5"
udgraph = "0.6"
unicode-normalization = "0.1"
